--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/app_name"
+                android:minHeight="48dp"
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <EditText
@@ -54,18 +55,17 @@
                 style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autofillHints=""
                 android:ems="10"
                 android:fontFamily="serif"
                 android:hint="@string/introduz_o_numero_que_deseja_convert"
                 android:inputType="number|text"
                 android:selectAllOnFocus="true"
                 android:singleLine="false"
-                android:text="@string/_8075"
                 android:textAlignment="viewEnd"
                 android:textAllCaps="false"
                 android:textSize="24sp"
-                android:typeface="normal"
-                android:autofillHints="" />
+                android:typeface="normal" />
         </LinearLayout>
 
         <TextView
@@ -89,25 +89,15 @@
                 android:id="@+id/currencySpinner2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/app_name" />
+                android:contentDescription="@string/app_name"
+                android:minHeight="48dp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/convertedET"
-                style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:fontFamily="serif"
-                android:inputType="number|text"
-                android:selectAllOnFocus="true"
-                android:singleLine="false"
-                android:textAlignment="viewEnd"
-                android:textAllCaps="false"
-                android:textSize="24sp"
-                android:typeface="normal"
-                tools:ignore="SpeakableTextPresentCheck"
-                android:autofillHints="" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="viewEnd" />
+
         </LinearLayout>
 
         <Button
